fix: fix wrap

--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body {
   font-family: "Roboto", sans-serif;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   margin: 0;
   height: 100vh;
 }
@@ -63,7 +64,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-
+  padding: 30px 0;
   background: silver;
   height: 86vh;
   flex-direction: column;
